Fix rebase conflicts: align JoinRoom contracts and clean up warnings